--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-  <title>MI EMPRESA</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+  <title>David Firman Oficial</title>
   <meta name="description"
     content="">
   <meta name="keywords"
@@ -54,17 +57,26 @@
           <div class="collapse navbar-collapse container__menu--bar" id="navbarNav">
             <ul class="navbar-nav container__menu--items">
               <li class="nav-item">
-                <a class="nav-link container__menu--item" href="#valor1">valor1</a>
+                <a class="nav-link container__menu--item" href="#sobreMi">Sobre mi</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link container__menu--item" href="#valor2">valor2</a>
+                <a class="nav-link container__menu--item" href="#cursos">Cursos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link container__menu--item" href="#valor3">valor3</a>
+                <a class="nav-link container__menu--item" href="#servicios">Servicios</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link container__menu--item" href="#invitaciones">Invitaciones</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link container__menu--item" href="#libros">Libros</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link container__menu--item" href="#videos">Videos</a>
               </li>
 
             </ul>
-            <a class="nav-item container__menu--item container__menu--btn" href="#contactUs">Contact us</a>
+            <a class="nav-item container__menu--item container__menu--btn" href="#contacto">Contacto</a>
           </div>
         </div>
       </nav>
@@ -73,12 +85,92 @@
     <!-- AQUI VA EL MENU-->
     <div></div>
     <section id="home">
-      <h1>MI PAGINA</h1>
-    </section>
+      <div class="container__home">
+        <div class="container__home--text">
+          <h1>David Firman</h1>
+          <p>Trabajamos para comprender y vivir los diseños eternos del ser integral, el matrimonio y la familia, recuperados por la sabiduría de Dios en la cruz, donde el Nuevo Pacto nos permite reescribir nuestra historia y disfrutar a Cristo como vida real.</p>
+          <a href="#contacto" class="btn btn-home">Conectemos</a>
+        </div>
+        <div class="container__home--img">
+          <img src="./img/DavidFirman.webp" alt="Imagen de David Firman" class="img-fluid">
+        </div>
+
+      </div>
+    </section> 
     <!-- HOME FIN-->
     <!--SECCIONES INICIO-->
+    <!-- SOBRE MI INICIO -->
+    <section id="sobreMi">
+      <div class="container">
+        <h2>Sobre mí</h2>
+        <p>Aquí va la información sobre ti.</p>
+      </div>
+    </section>
+    <!-- SOBRE MI FIN -->
+
+    <!-- CURSOS INICIO -->
+    <section id="cursos">
+      <div class="container">
+        <h2>Cursos</h2>
+        <p>Listado o información de cursos.</p>
+      </div>
+    </section>
+    <!-- CURSOS FIN -->
+
+    <!-- SERVICIOS INICIO -->
+    <section id="servicios">
+      <div class="container">
+        <h2>Servicios</h2>
+        <p>Descripción de los servicios ofrecidos.</p>
+      </div>
+    </section>
+    <!-- SERVICIOS FIN -->
+
+    <!-- INVITACIONES INICIO -->
+    <section id="invitaciones">
+      <div class="container">
+        <h2>Invitaciones</h2>
+        <p>Información sobre invitaciones.</p>
+      </div>
+    </section>
+    <!-- INVITACIONES FIN -->
+
+    <!-- LIBROS INICIO -->
+    <section id="libros">
+      <div class="container">
+        <h2>Libros</h2>
+        <p>Listado o información de libros.</p>
+      </div>
+    </section>
+    <!-- LIBROS FIN -->
+
+    <!-- VIDEOS INICIO -->
+    <section id="videos">
+      <div class="container">
+        <h2>Videos</h2>
+        <p>Galería o enlaces a videos.</p>
+      </div>
+    </section>
+    <!-- VIDEOS FIN -->
     <!--SECCIONES FIN-->
     <!-- FOOTER INICIO-->
+    <footer id="footer">
+      <div class="container__footer">
+        <div class="container__footer--logo">
+          <img src="./img/logo.png" alt="Logo" class="img-fluid">
+        </div>
+        <div class="container__footer--text">
+          <p>© 2025 David Firman. Todos los derechos reservados.</p>
+        </div>
+        <div class="container__footer--social">
+          <a href="https://www.facebook.com/david.firman.5" target="_blank"><img src="./img/facebook.png"
+              alt="Facebook"></a>
+          <a href="https://www.instagram.com/davidfirmanoficial/" target="_blank"><img src="./img/instagram.png"
+              alt="Instagram"></a>
+          <a href="https://www.youtube.com/@davidfirmanoficial" target="_blank"><img src="./img/youtube.png"
+              alt="YouTube"></a>
+        </div>
+      </div>
     <!-- FOOTER FIN-->
 
   </main>
