Se agrega Seccion invitaciones y libros, con modal de formulario 1/06/2025

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             <div class="container-servicios--card-text">
               <h3>Consultas psicoterapeuticas</h3>
               <p>Con más de 28 años de experiencia clínica trabajo en resolución de conflictos o terapia breve considerando el ser integral: espíritu, alma y cuerpo.</p>
-              <a href="#" class="btn btn-home">Solicitar</a>
+              <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/ConsultasPsicoterapeuticas.webp" alt="Consultas Psicoterapeuticas">
           </div>
@@ -138,7 +138,7 @@
             <div class="container-servicios--card-text">
               <h3>Entrenamiento de profesionales de la Salud mental</h3>
               <p>Trabajamos para salir del secuestro del humanismo entendiendo la sabiduría eterna de Dios para solucionar de fondo los problemas humanos. Material grabado y encuentros en vivo vía zoom.</p>
-              <a href="#" class="btn btn-home">Solicitar</a>
+              <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/EntrenamientoDeprofesionalesDeLaSaludMental.webp" alt="Entrenamiento de profesionales de la Salud mental">
           </div>
@@ -146,7 +146,7 @@
             <div class="container-servicios--card-text">
               <h3>Supervisión de casos clínicos</h3>
               <p>En encuentros en vivo vía zoom poniendo a disposición mi experiencia para colaborar orientando en los casos de profesionales que lo soliciten.</p>
-              <a href="#" class="btn btn-home">Solicitar</a>
+              <a href="#" class="btn btn-servicios">Solicitar</a>
             </div>
             <img class="container-servicios--card-img" src="./img/SupervisiónDeCasosClínicos.webp" alt="Supervisión de casos clínicos">
           </div>
@@ -167,7 +167,7 @@
                 <img src="./img/psicologia.webp" alt="La Psicología de Dios">
                 <h3>La Psicología de Dios</h3>
                 <p>En este curso se aborda cómo la mente, la voluntad y las emociones (alma) son parte del diseño de Dios del ser integral y cuál es el objetivo de Dios para el alma humana.</p>
-                <a href="#" class="btn btn-card">Inscríbete aquí</a>
+                <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -175,7 +175,7 @@
                 <img src="./img/familia.webp" alt="Familias Alineadas a lo Eterno">
                 <h3>Familias Alineadas a lo Eterno</h3>
                 <p>Descubre el diseño y las intenciones originales de Dios y aprende a incorporarlas a tu familia.</p>
-                <a href="#" class="btn btn-card">Inscríbete aquí</a>
+                <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -183,7 +183,7 @@
                 <img src="./img/adversidad.webp" alt="Cómo enfrentar la adversidad">
                 <h3>Cómo enfrentar la adversidad</h3>
                 <p>Este curso aborda un tema clave: el dolor, la tragedia, el sufrimiento, la muerte y el duelo, brindando herramientas para afrontarlos.</p>
-                <a href="#" class="btn btn-card">Inscríbete aquí</a>
+                <a href="#" class="btn btn-curso">Inscríbete aquí</a>
               </div>
             </div>
             <div class="swiper-slide">
@@ -205,18 +205,76 @@
 
     <!-- INVITACIONES INICIO -->
     <section id="invitaciones">
-      <div class="container">
-        <h2>Invitaciones</h2>
-        <p>Información sobre invitaciones.</p>
+      <div class="container__invitaciones">
+        <h2>Sobreedificador de la Iglesia</h2>
+        <div class="container__invitaciones--contenido">
+          <div class="container__invitaciones--text">
+          <p>Entendemos que el Evangelio no es una enseñanza estática, definiciones o conceptos a ser aprendidos, sino una naturaleza divina que nos fue impartida en Cristo por el nuevo nacimiento, no para actuar como Cristo sino para que Él actúe en nosotros. Por esto, trabajamos en mesas que sirven el Pan de Vida que es Cristo para el entrenamiento de esa naturaleza en hombres y mujeres que, respondiendo al interés, a la causa de Dios, activen esa vida de propósito. Eso producirá que avancen como herramientas en las manos de Dios con el fin de redimir su generación para Su Gloria para producir el aumento de Cristo en la tierra.</p>
+          <a href="#" class="btn btn-invitaciones">Solicitar invitación</a>
+        </div>
+        <div class="container__invitaciones--img">
+          <img src="./img/mundoCruzz.webp" alt="Sobreedificador de la Iglesia" class="img-fluid">
       </div>
+        </div>
     </section>
     <!-- INVITACIONES FIN -->
 
     <!-- LIBROS INICIO -->
     <section id="libros">
-      <div class="container">
+      <div class="container__libros ">
         <h2>Libros</h2>
-        <p>Listado o información de libros.</p>
+        <p>Como servicio trabajamos en dejar a disposición de las familias y la Iglesia materiales de profunda edificación, algunos en versión PDF gratuitos y otros disponibles en versión impresa por Editorial Peniel.</p>
+        <!-- Libros compra -->
+        <div class="container__libros--compra--cards">
+          <div class="container__libros--card">
+            <div>
+              <img src="./img/book-psicologia.webp" alt="La Psicología de Dios" class="img-fluid">
+            </div>  
+              <h3>La Psicología de Dios</h3>
+              <a href="#" class="btn btn-card">Comprar</a>
+            </div>
+            <div class="container__libros--card">
+             <div>
+               <img src="./img/book-familia.webp" alt="Familias Alineadas a lo Eterno" class="img-fluid">
+             </div>
+              <h3>Familias Alineadas a lo Eterno</h3>
+              <a href="#" class="btn btn-card">Comprar</a>
+            </div>
+        </div>
+        <!-- Libros gratuitos -->
+        <div class="swiper librosDescargaSwiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-discipulado.webp" alt="Familias que discipulan a sus generaciones" class="img-fluid">
+              <h3>Familias que discipulan a sus generaciones</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-muerte.webp" alt="Cómo enfrentar la muerte" class="img-fluid">
+              <h3>Cómo enfrentar la muerte</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-familiaProposito.webp" alt="Familias con propósito" class="img-fluid">
+              <h3>Familias con propósito</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-Matrimonio.webp" alt="Construyendo un matrimonio que funciona" class="img-fluid">
+              <h3>Construyendo un matrimonio que funciona</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <div class="swiper-slide container__libros--card">
+              <img src="./img/book-noviazgo.webp" alt="Noviazgo de la mano de Dios" class="img-fluid">
+              <h3>Noviazgo de la mano de Dios</h3>
+              <a href="#" class="btn btn-card">Descargar</a>
+            </div>
+            <!-- Agrega más slides aquí si tienes más libros de descarga -->
+          </div>
+          <div class="swiper-pagination librosDescarga-pagination"></div>
+        </div>
+        <!-- Libros en venta -->
+        
       </div>
     </section>
     <!-- LIBROS FIN -->
@@ -268,6 +326,42 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
     integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
     crossorigin="anonymous"></script>
+  
+  <!-- Modal de contacto -->
+<div class="modal fade" id="formModal" tabindex="-1" aria-labelledby="formModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <form id="contactoModalForm">
+        <div class="modal-header">
+          <h5 class="modal-title" id="formModalLabel">Formulario de contacto</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar"></button>
+        </div>
+        <div class="modal-body">
+          <div class="mb-3">
+            <label for="nombre" class="form-label">Nombre</label>
+            <input type="text" class="form-control" id="nombre" name="nombre" required>
+          </div>
+          <div class="mb-3">
+            <label for="email" class="form-label">Correo electrónico</label>
+            <input type="email" class="form-control" id="email" name="email" required>
+          </div>
+          <div class="mb-3">
+            <label for="motivo" class="form-label">Motivo</label>
+            <input type="text" class="form-control" id="motivo" name="motivo" readonly>
+          </div>
+          <div class="mb-3">
+            <label for="mensaje" class="form-label">Mensaje</label>
+            <textarea class="form-control" id="mensaje" name="mensaje" rows="3" required></textarea>
+          </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </form>
+    </div>
+  </div>
+</div>
   
 </body>
 
