--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <link rel="shortcut icon" href="/img/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
- <!--  <link rel="manifest" href="/site.webmanifest" /> -->
+  <link rel="manifest" href="/site.webmanifest" /> 
 </head>
 
 <body>
