--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   
   <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
   <link rel="icon" type="image/png" href="img/favicon-96x96.png" sizes="96x96" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/svg+xml" href="img/favicon.svg" />
   <link rel="shortcut icon" href="/img/favicon.ico" />
   <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png" />
   <link rel="manifest" href="/site.webmanifest" /> 
@@ -286,7 +286,7 @@
           <a href="https://www.youtube.com/@DavidFirmanOficial" class="btn btn-card" target="_blank">Ir al canal</a>
         </div>
         <div class="container__videos--principal">
-            <iframe src="https://www.youtube.com/embed/XNbfDSbAdK8" title="Video 1" frameborder="0" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/XNbfDSbAdK8" title="Master Class Psicología De Dios de David Firman" frameborder="0" allowfullscreen></iframe>
         </div>
       </div>
        <div class="swiper videosSwiper">
@@ -313,25 +313,116 @@
       
     </section>
     <!-- VIDEOS FIN -->
+    <!-- CONTACTO INICIO -->
+    <section id="contacto">
+      <div class="container__contacto">
+        <div class="container__contacto--text">
+          <h2>Conectemos</h2>
+          <p>Queremos acompañarte a vivir la plenitud de Dios. Deja tu mensaje y te responderemos la brevedad</p>   
+          <div class="container__contacto--redesSociales">
+            <a href="#" class="container__contacto--redSocial" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+              <path d="M18 12.7575C15.0975 12.7575 12.7575 15.12 12.7575 18C12.7575 20.88 15.12 23.2425 18 23.2425C20.88 23.2425 23.2425 20.88 23.2425 18C23.2425 15.12 20.88 12.7575 18 12.7575ZM33.75 18C33.75 15.8175 33.75 13.68 33.6375 11.4975C33.525 8.9775 32.94 6.7275 31.095 4.905C29.25 3.06 27.0225 2.475 24.5025 2.3625C22.32 2.25 20.1825 2.25 18 2.25C15.8175 2.25 13.68 2.25 11.4975 2.3625C8.9775 2.475 6.7275 3.06 4.905 4.905C3.06 6.75 2.475 8.9775 2.3625 11.4975C2.25 13.68 2.25 15.8175 2.25 18C2.25 20.1825 2.25 22.32 2.3625 24.5025C2.475 27.0225 3.06 29.2725 4.905 31.095C6.75 32.94 8.9775 33.525 11.4975 33.6375C13.68 33.75 15.8175 33.75 18 33.75C20.1825 33.75 22.32 33.75 24.5025 33.6375C27.0225 33.525 29.2725 32.94 31.095 31.095C32.94 29.25 33.525 27.0225 33.6375 24.5025C33.7725 22.3425 33.75 20.1825 33.75 18ZM18 26.0775C13.5225 26.0775 9.9225 22.4775 9.9225 18C9.9225 13.5225 13.5225 9.9225 18 9.9225C22.4775 9.9225 26.0775 13.5225 26.0775 18C26.0775 22.4775 22.4775 26.0775 18 26.0775ZM26.415 11.475C25.38 11.475 24.525 10.6425 24.525 9.585C24.525 8.5275 25.3575 7.695 26.415 7.695C27.4725 7.695 28.305 8.5275 28.305 9.585C28.3107 9.83146 28.2657 10.0765 28.1728 10.3048C28.0799 10.5332 27.9411 10.74 27.765 10.9125C27.5925 11.0886 27.3857 11.2274 27.1573 11.3203C26.929 11.4132 26.684 11.4582 26.4375 11.4525L26.415 11.475Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            </svg>
+            <h4>davidfirmanoficial</h4>
+          </a>
+          <a href="#" class="container__contacto--redSocial" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+              <path d="M33 18C33 9.72 26.28 3 18 3C9.72 3 3 9.72 3 18C3 25.26 8.16 31.305 15 32.7V22.5H12V18H15V14.25C15 11.355 17.355 9 20.25 9H24V13.5H21C20.175 13.5 19.5 14.175 19.5 15V18H24V22.5H19.5V32.925C27.075 32.175 33 25.785 33 18Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            </svg>
+            <h4>davidfirmanoficial</h4>
+          </a>
+          <a href="#" class="container__contacto--redSocial" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+              <path d="M15 22.5L22.785 18L15 13.5V22.5ZM32.34 10.755C32.535 11.46 32.67 12.405 32.76 13.605C32.865 14.805 32.91 15.84 32.91 16.74L33 18C33 21.285 32.76 23.7 32.34 25.245C31.965 26.595 31.095 27.465 29.745 27.84C29.04 28.035 27.75 28.17 25.77 28.26C23.82 28.365 22.035 28.41 20.385 28.41L18 28.5C11.715 28.5 7.8 28.26 6.255 27.84C4.905 27.465 4.035 26.595 3.66 25.245C3.465 24.54 3.33 23.595 3.24 22.395C3.135 21.195 3.09 20.16 3.09 19.26L3 18C3 14.715 3.24 12.3 3.66 10.755C4.035 9.405 4.905 8.535 6.255 8.16C6.96 7.965 8.25 7.83 10.23 7.74C12.18 7.635 13.965 7.59 15.615 7.59L18 7.5C24.285 7.5 28.2 7.74 29.745 8.16C31.095 8.535 31.965 9.405 32.34 10.755Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            </svg>
+            <h4>davidfirmanoficial</h4>
+          </a>
+          <div class="container__contacto--redSocial" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+              <path fill-rule="evenodd" clip-rule="evenodd" d="M6 6.375C4.90598 6.375 3.85677 6.8096 3.08318 7.58318C2.3096 8.35677 1.875 9.40598 1.875 10.5V25.5C1.875 26.594 2.3096 27.6432 3.08318 28.4168C3.85677 29.1904 4.90598 29.625 6 29.625H30C31.094 29.625 32.1432 29.1904 32.9168 28.4168C33.6904 27.6432 34.125 26.594 34.125 25.5V10.5C34.125 9.40598 33.6904 8.35677 32.9168 7.58318C32.1432 6.8096 31.094 6.375 30 6.375H6ZM11.145 12.579C10.9005 12.4194 10.6035 12.3612 10.3168 12.4166C10.0301 12.472 9.7762 12.6366 9.6087 12.8758C9.44121 13.115 9.37326 13.4099 9.41922 13.6982C9.46518 13.9866 9.62145 14.2458 9.855 14.421L17.355 19.671C17.5441 19.8033 17.7692 19.8743 18 19.8743C18.2308 19.8743 18.4559 19.8033 18.645 19.671L26.145 14.421C26.2713 14.3386 26.3798 14.2316 26.4639 14.1064C26.5481 13.9812 26.6062 13.8403 26.6348 13.6922C26.6634 13.5441 26.6619 13.3918 26.6305 13.2443C26.599 13.0968 26.5382 12.9571 26.4517 12.8335C26.3652 12.71 26.2547 12.6051 26.1268 12.5251C25.9989 12.4451 25.8562 12.3916 25.7073 12.3679C25.5583 12.3441 25.4061 12.3506 25.2597 12.3869C25.1133 12.4231 24.9757 12.4885 24.855 12.579L18 17.3775L11.145 12.579Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            </svg>
+            <h4>davidfirmanpsicologo@gmail.com</h4>
+          </div>
+          </div>
+        </div>
+        <div class="container__contacto--form">
+          <form id="contactoForm">
+            <div class="row mb-3 row_form">
+            <div class="col">
+              <label for="nombre" class="form-label">Nombre</label>
+              <input type="text" class="form-control" id="nombre" name="nombre" required>
+            </div>
+              <div class="col">
+                <label for="nombre" class="form-label">Apellido</label>
+                <input type="text" class="form-control" id="nombre" name="nombre" required>
+              </div>
+            </div>
+            <div class="mb-3">
+              <label for="email" class="form-label">Correo electrónico</label>
+              <input type="email" class="form-control" id="email" name="email" required>
+            </div>
+            <div class="mb-3">
+              <label for="motivo" class="form-label">Motivo</label>
+              <select class="form-select" id="motivo" name="motivo" required>
+                <option value="" disabled selected>Selecciona un motivo</option>
+                <option value="Consulta Psicoterapéutica">Consulta Psicoterapéutica</option>
+                <option value="Entrenamiento Profesional">Entrenamiento Profesional</option>
+                <option value="Supervisión de Casos Clínicos">Supervisión de Casos Clínicos</option>
+                <option value="Invitación a Conferencia">Invitación a Conferencia</option>
+                <option value="Otro">Otro</option>
+              </select>
+            </div>
+            <div class="mb-3">
+              <label for="mensaje" class="form-label">Mensaje</label>
+              <textarea class="form-control" id="mensaje" name="mensaje" rows="3" required></textarea>
+            </div>
+            <div class="form-footer">
+              <button type="submit" class="btn btn-card">Enviar</button>
+            </div>
+          </form>
+
+        </div>
+      </div>
+    </section>
+    <!-- CONTACTO INICIO -->
+
     <!--SECCIONES FIN-->
     <!-- FOOTER INICIO-->
     <footer id="footer">
       <div class="container__footer">
         <div class="container__footer--logo">
-          <!-- <img src="./img/DavidFirmaLogo.svg" alt="Logo"> -->
+          <img src="./img/DavidFirmaLogo.svg" alt="Logo">
         </div>
-        <div class="container__footer--text">
-          <p>© 2025 David Firman. Todos los derechos reservados.</p>
-        </div>
+      
         <div class="container__footer--social">
-          <!-- <a href="https://www.facebook.com/david.firman.5" target="_blank"><img src="./img/facebook.png"
-              alt="Facebook"></a>
-          <a href="https://www.instagram.com/davidfirmanoficial/" target="_blank"><img src="./img/instagram.png"
-              alt="Instagram"></a>
-          <a href="https://www.youtube.com/@davidfirmanoficial" target="_blank"><img src="./img/youtube.png"
-              alt="YouTube"></a> -->
+            <a href="#" class="container__footer--redSocial" target="_blank">
+            <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+              <path d="M18 12.7575C15.0975 12.7575 12.7575 15.12 12.7575 18C12.7575 20.88 15.12 23.2425 18 23.2425C20.88 23.2425 23.2425 20.88 23.2425 18C23.2425 15.12 20.88 12.7575 18 12.7575ZM33.75 18C33.75 15.8175 33.75 13.68 33.6375 11.4975C33.525 8.9775 32.94 6.7275 31.095 4.905C29.25 3.06 27.0225 2.475 24.5025 2.3625C22.32 2.25 20.1825 2.25 18 2.25C15.8175 2.25 13.68 2.25 11.4975 2.3625C8.9775 2.475 6.7275 3.06 4.905 4.905C3.06 6.75 2.475 8.9775 2.3625 11.4975C2.25 13.68 2.25 15.8175 2.25 18C2.25 20.1825 2.25 22.32 2.3625 24.5025C2.475 27.0225 3.06 29.2725 4.905 31.095C6.75 32.94 8.9775 33.525 11.4975 33.6375C13.68 33.75 15.8175 33.75 18 33.75C20.1825 33.75 22.32 33.75 24.5025 33.6375C27.0225 33.525 29.2725 32.94 31.095 31.095C32.94 29.25 33.525 27.0225 33.6375 24.5025C33.7725 22.3425 33.75 20.1825 33.75 18ZM18 26.0775C13.5225 26.0775 9.9225 22.4775 9.9225 18C9.9225 13.5225 13.5225 9.9225 18 9.9225C22.4775 9.9225 26.0775 13.5225 26.0775 18C26.0775 22.4775 22.4775 26.0775 18 26.0775ZM26.415 11.475C25.38 11.475 24.525 10.6425 24.525 9.585C24.525 8.5275 25.3575 7.695 26.415 7.695C27.4725 7.695 28.305 8.5275 28.305 9.585C28.3107 9.83146 28.2657 10.0765 28.1728 10.3048C28.0799 10.5332 27.9411 10.74 27.765 10.9125C27.5925 11.0886 27.3857 11.2274 27.1573 11.3203C26.929 11.4132 26.684 11.4582 26.4375 11.4525L26.415 11.475Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+            </svg>
+            <h4>davidfirmanoficial</h4>
+            </a>
+            <a href="#" class="container__footer--redSocial" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                <path d="M33 18C33 9.72 26.28 3 18 3C9.72 3 3 9.72 3 18C3 25.26 8.16 31.305 15 32.7V22.5H12V18H15V14.25C15 11.355 17.355 9 20.25 9H24V13.5H21C20.175 13.5 19.5 14.175 19.5 15V18H24V22.5H19.5V32.925C27.075 32.175 33 25.785 33 18Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              </svg>
+              <h4>davidfirmanoficial</h4>
+            </a>
+            <a href="#" class="container__footer--redSocial" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                <path d="M15 22.5L22.785 18L15 13.5V22.5ZM32.34 10.755C32.535 11.46 32.67 12.405 32.76 13.605C32.865 14.805 32.91 15.84 32.91 16.74L33 18C33 21.285 32.76 23.7 32.34 25.245C31.965 26.595 31.095 27.465 29.745 27.84C29.04 28.035 27.75 28.17 25.77 28.26C23.82 28.365 22.035 28.41 20.385 28.41L18 28.5C11.715 28.5 7.8 28.26 6.255 27.84C4.905 27.465 4.035 26.595 3.66 25.245C3.465 24.54 3.33 23.595 3.24 22.395C3.135 21.195 3.09 20.16 3.09 19.26L3 18C3 14.715 3.24 12.3 3.66 10.755C4.035 9.405 4.905 8.535 6.255 8.16C6.96 7.965 8.25 7.83 10.23 7.74C12.18 7.635 13.965 7.59 15.615 7.59L18 7.5C24.285 7.5 28.2 7.74 29.745 8.16C31.095 8.535 31.965 9.405 32.34 10.755Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              </svg>
+              <h4>davidfirmanoficial</h4>
+            </a>
+            <div class="container__footer--redSocial" target="_blank">
+              <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" viewBox="0 0 36 36" fill="none">
+                <path fill-rule="evenodd" clip-rule="evenodd" d="M6 6.375C4.90598 6.375 3.85677 6.8096 3.08318 7.58318C2.3096 8.35677 1.875 9.40598 1.875 10.5V25.5C1.875 26.594 2.3096 27.6432 3.08318 28.4168C3.85677 29.1904 4.90598 29.625 6 29.625H30C31.094 29.625 32.1432 29.1904 32.9168 28.4168C33.6904 27.6432 34.125 26.594 34.125 25.5V10.5C34.125 9.40598 33.6904 8.35677 32.9168 7.58318C32.1432 6.8096 31.094 6.375 30 6.375H6ZM11.145 12.579C10.9005 12.4194 10.6035 12.3612 10.3168 12.4166C10.0301 12.472 9.7762 12.6366 9.6087 12.8758C9.44121 13.115 9.37326 13.4099 9.41922 13.6982C9.46518 13.9866 9.62145 14.2458 9.855 14.421L17.355 19.671C17.5441 19.8033 17.7692 19.8743 18 19.8743C18.2308 19.8743 18.4559 19.8033 18.645 19.671L26.145 14.421C26.2713 14.3386 26.3798 14.2316 26.4639 14.1064C26.5481 13.9812 26.6062 13.8403 26.6348 13.6922C26.6634 13.5441 26.6619 13.3918 26.6305 13.2443C26.599 13.0968 26.5382 12.9571 26.4517 12.8335C26.3652 12.71 26.2547 12.6051 26.1268 12.5251C25.9989 12.4451 25.8562 12.3916 25.7073 12.3679C25.5583 12.3441 25.4061 12.3506 25.2597 12.3869C25.1133 12.4231 24.9757 12.4885 24.855 12.579L18 17.3775L11.145 12.579Z" fill="#9D0000" style="fill:#9D0000;fill:color(display-p3 0.6157 0.0000 0.0000);fill-opacity:1;"/>
+              </svg>
+              <h4>davidfirmanpsicologo@gmail.com</h4>
+            </div>
         </div>
       </div>
+    </footer>
     <!-- FOOTER FIN-->
 
   </main>
@@ -347,24 +438,24 @@
             <div class="modal-body">
               <div class="mb-3">
                 <label for="nombre" class="form-label">Nombre</label>
-                <input type="text" class="form-control" id="nombre" name="nombre" required>
+                <input type="text" class="form-control" id="nombreModal" name="nombre" required>
               </div>
               <div class="mb-3">
                 <label for="email" class="form-label">Correo electrónico</label>
-                <input type="email" class="form-control" id="email" name="email" required>
+                <input type="email" class="form-control" id="emailModal" name="email" required>
               </div>
               <div class="mb-3">
                 <label for="motivo" class="form-label">Motivo</label>
-                <input type="text" class="form-control" id="motivo" name="motivo" readonly>
+                <input type="text" class="form-control" id="motivoModal" name="motivo" readonly>
               </div>
               <div class="mb-3">
                 <label for="mensaje" class="form-label">Mensaje</label>
-                <textarea class="form-control" id="mensaje" name="mensaje" rows="3" required></textarea>
+                <textarea class="form-control" id="mensajeModal" name="mensaje" rows="3" required></textarea>
               </div>
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-              <button type="submit" class="btn btn-primary">Enviar</button>
+              <button type="submit" class="btn btn-card">Enviar</button>
             </div>
           </form>
         </div>
